syntax = "proto3";

import "pkg/proto/common.proto";

package userService;

option go_package ="github.com/kioku-project/kioku/services/user/proto;user";

service User {
	rpc Register(common.User) returns (common.Success) {}
	rpc DeleteUser(common.User) returns (common.Success) {}
	rpc Login(common.User) returns (common.User) {}
	rpc GetUserIDFromEmail(common.User) returns (common.User) {}
	rpc GetUserInformation(common.Users) returns (common.Users) {}
	rpc GetUserProfileInformation(common.User) returns (common.User) {}
	rpc ModifyUserProfileInformation(common.User) returns (common.Success) {}
	rpc VerifyUserExists(common.User) returns (common.Success) {}
}